Model Creations and management of identity user

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagementSystemIndividual-4AEE904B-B3E1-4B5C-A9DA-F603A3C83832;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-1I2UJLD\\SQLEXPRESS;Database=aspnet-LeaveManagementSystemIndividual-4AEE904B-B3E1-4B5C-A9DA-F603A3C83832;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
